# workshop-05

./: .gitignore  README-projeto-01.md  README.md  exemplo.env-exemplo  exemplo_00.py  exemplo_01.py  exemplo_02.py  exemplo_03_estrict.py  exemplo_03_lax.py  exemplo_03_strict_validator.py  exemplo_04_nullable.py  exemplo_04_optional.py  inferred_schema.json  inferred_schema.py  mkdocs.yml  my_duckdb.db  produto.json  projeto.py  pyproject.toml  task_01.py
.github/workflows/: CI.yml
app/etl/: crm.py  crm_refactor_01.py  crm_refactor_02.py  crm_refactor_03_infer.py  crm_refactor_04_validar.py  crm_refactor_05_validar_class.py  crm_refactor_06_coluna_extra.py  crm_refactor_07_coluna_extra_pass.py  crm_refactor_08_transform_load.py  crm_refactor_09_load.py  crm_refactor_10_query_duckdb.py  crm_refactor_11_doc_string.py  crm_refactor_12.py  schema.py  schema_class.py  schema_class_email_kpi.py  schema_class_email_kpi_docstring.py
docs/: index.md  projeto_01.md  requisito-projeto-etl-sql.md
exemplos/: exemplo_03_estrict.py  exemplo_03_strict_validator.py  projeto.py
projeto_01/: main.py
sql/: create_table_produtos_bronze.sql  insert_into_tabela_bronze.sql
tests/: test_crm.py  test_ola_mundo.py
